# aoc2025

./: .clangd  .gitignore  CMakeLists.txt  README.md  profile.sh  run.sh
include/: my_util.h
quick/: day9.py
src/: 2024day12.cpp  2024day17.cpp  2024day24.cpp  day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  main.cpp  my_util.cpp
